--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ protobuf=3.19.6=pypi_0
 pyasn1=0.5.0=pypi_0
 pyasn1-modules=0.3.0=pypi_0
 python=3.6.15=h39d44d4_0_cpython
+python-dotenv=1.0.0=pyhd8ed1ab_0
 python_abi=3.6=2_cp36m
 ratelim=0.1.6=pypi_0
 regex=2022.10.31=pypi_0
